<resources>
    <string name="app_name">Local Weather</string>
    <string name="current_condition_text">Current condition: </string>
    <string name="temperature_text">Temperature: </string>
    <string name="wind_speed_text">Wind speed: </string>
    <string name="wind_direction_text">Wind direction: </string>
    <string name="loading_text">Loading...</string>
    <string name="play_services_unavailable">Google play services are unavailable. \nCan\'t figure your location.</string>
    <string name="permissions_not_granted">Location permissions not granted.</string>
    <string name="start_gps_question_title">Start GPS</string>
    <string name="get_gps_enabled_string">Gps required to be enabled</string>
    <string name="try_offline_mode_string">Try offline mode</string>
    <string name="are_you_sure_string">Are you sure?</string>
    <string name="no_data_text">No Data</string>
    <string name="you_need_gps">For real-time weather, turn on GPS</string>
</resources>
